--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsc-watch --onSuccess 'node --inspect ./dist/index.js'",
+    "start": "rm -rf ./dist && tsc-watch --onSuccess 'node --inspect ./dist/src/index.js'",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --watch",
     "lint": "yarn lint:typecheck && yarn lint:prettier && yarn lint:eslint",
     "lint:prettier": "prettier --write 'src/**/*.ts'",
     "lint:eslint": "eslint src --ext '.ts,.tsx' --cache --fix",
@@ -22,7 +22,10 @@
     "@typescript-eslint/parser": "5.59.11",
     "eslint": "6.6.0",
     "eslint-config-prettier": "6.11.0",
+    "jest": "^29.5.0",
     "prettier": "2.1.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4"
   }
 }
