--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "26.0.13",
     "@types/node": "12.0.0",
     "@typescript-eslint/eslint-plugin": "5.59.11",
     "@typescript-eslint/parser": "5.59.11",
     "eslint": "6.6.0",
     "eslint-config-prettier": "6.11.0",
+    "express": "^4.18.2",
     "jest": "^29.5.0",
     "prettier": "2.1.1",
     "ts-jest": "^29.1.0",
